# cognee-hack

./: .dockerignore  .env.example  .env.example.deploy  .gitignore  Dockerfile  Dockerfile.app  LICENSE  README.md  debug_ws.py  docker-compose.deploy.yml  inspect_qdrant.py  inspection.txt  langgraph.json  main.py  pyproject.toml  setup-droplet.sh  streamlit_app.py  verify_cache.py  verify_fix.py
deployment/: Dockerfile.app  api.py  prepare-deploy.sh  setup.py  streamlit_app.py
deployment/scripts/: docker-entrypoint.sh
docs/: .gitkeep
notebook/: Cache_RAG.ipynb  RAG_Redis.py  self-evolve Agent.py  self_evolving_medical_qa.py  supervisor_agent.py  weave_openai_demo.py
sample_patients/: README.md  patient_james_chen.txt  patient_maria_santos.txt  patient_sarah_williams.txt
scripts/: cognee_ingest.py  docker-entrypoint.sh  register-models.sh
src/clinxplain/: __init__.py  __main__.py  agentic.py  api.py  supervisor.py
src/clinxplain/cli/: __init__.py  api.py  rag.py  supervisor.py
src/clinxplain/rag/: __init__.py  cognee_ingest.py  config.py  graph.py  ingestion.py  pipeline.py  retrieval.py  schema.yaml  weave_eval.py
